--- a/api/schema/pom.xml
+++ b/api/schema/pom.xml
@@ -60,6 +60,35 @@
 
 				<plugins>
 					<plugin>
+					    <groupId>org.codehaus.mojo</groupId>
+					    <artifactId>jaxb2-maven-plugin</artifactId>
+					    <version>3.1.0</version>
+					    <executions>
+					        <execution>
+					            <id>xjc</id>
+					            <goals>
+					                <goal>xjc</goal>
+					            </goals>
+					        </execution>
+					    </executions>
+					    <configuration>
+					        <xjbSources>
+					            <xjbSource>src/main/resources/org/apache/causeway/schema/bindings.xjb</xjbSource>
+					        </xjbSources>
+					        <sources>
+								<source>src/main/resources/org/apache/causeway/schema/common/common-2.0.xsd</source>
+								<source>src/main/resources/org/apache/causeway/schema/cmd/cmd-2.0.xsd</source>
+								<source>src/main/resources/org/apache/causeway/schema/ixn/ixn-2.0.xsd</source>
+								<source>src/main/resources/org/apache/causeway/schema/chg/chg-2.0.xsd</source>
+								<source>src/main/resources/org/apache/causeway/schema/metamodel/metamodel-2.0.xsd</source>
+					        </sources>
+					        <outputDirectory>${basedir}/target/generated-sources/xjc</outputDirectory>
+					        <clearOutputDir>false</clearOutputDir>
+					    </configuration>
+					</plugin>
+					
+					<!-- 
+					<plugin>
 						<groupId>org.jvnet.jaxb2.maven2</groupId>
 						<artifactId>maven-jaxb2-plugin</artifactId>
 						<version>0.15.1</version>
@@ -97,7 +126,7 @@
 								<version>1.3</version>
 							</dependency>
 							<dependency>
-								<!-- fixes build on JDK 16+ see https://github.com/highsource/maven-jaxb2-plugin/issues/201 -->
+								
 								<groupId>org.glassfish.jaxb</groupId>
 								<artifactId>jaxb-runtime</artifactId>
 								<version>2.3.3</version>
@@ -123,6 +152,9 @@
 							</execution>
 						</executions>
 					</plugin>
+					-->
+					
+					
 				</plugins>
 			</build>
 		</profile>
