--- a/core/webapp/pom.xml
+++ b/core/webapp/pom.xml
@@ -96,8 +96,8 @@
 		</dependency>
 		
 		<dependency>
-		    <groupId>javax.servlet</groupId>
-		    <artifactId>javax.servlet-api</artifactId>
+		    <groupId>jakarta.servlet</groupId>
+		    <artifactId>jakarta.servlet-api</artifactId>
 		    <scope>compile</scope> <!-- compile: makes it transitive -->
 		</dependency>
 
