ISIS-3275: migrate persistence

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -868,9 +868,9 @@
 			</dependency>
 
 			<dependency>
-				<groupId>javax.servlet</groupId>
-				<artifactId>javax.servlet-api</artifactId>
-				<version>${javax-servlet.version}</version>
+				<groupId>jakarta.servlet</groupId>
+				<artifactId>jakarta.servlet-api</artifactId>
+				<version>${jakarta-servlet.version}</version>
 			</dependency>
 
 			<!-- 3.2 not available yet, instead use org.datanucleus:javax.jdo
