--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -363,7 +363,7 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
         <jakartaee.version>10.0.0</jakartaee.version>
         <javafaker.version>1.0.2</javafaker.version>
         <javassist.version>3.29.2-GA</javassist.version>
-        <javax-servlet.version>4.0.1</javax-servlet.version>
+        <jakarta-servlet.version>6.0.0</jakarta-servlet.version>
         <jaxb-impl.version>4.0.1</jaxb-impl.version>
         <jaxws-ri.version>4.0.0</jaxws-ri.version>
 
