--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -405,8 +405,8 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
 
         <quartz-scheduler.version>2.3.2</quartz-scheduler.version>
 
-        <resteasy-spring-boot-starter.version>5.0.0.Final</resteasy-spring-boot-starter.version>
-        <resteasy.version>5.0.0.Final</resteasy.version> <!-- keep in sync with property defined in resteasy4-spring-boot-starter -->
+        <resteasy-spring-boot-starter.version>6.0.0.Alpha2</resteasy-spring-boot-starter.version>
+        <resteasy.version>6.2.1.Final</resteasy.version> <!-- keep in sync with property defined in resteasy4-spring-boot-starter -->
         <resteasy-jaxb-provider.version>6.2.1.Final</resteasy-jaxb-provider.version>
         
 
