ISIS-3277: convert RO artifacts to Java Modules (except jaxrsresteasay)
- jaxrsresteasay won't work as of resteasy 5.0.0-final

module ... reads package org.jboss.resteasy.concurrent from both
resteasy.core and resteasy.core.spi

--- a/viewers/restfulobjects/jaxrs-resteasy/pom.xml
+++ b/viewers/restfulobjects/jaxrs-resteasy/pom.xml
@@ -92,6 +92,10 @@
 					<groupId>org.ow2.asm</groupId>
 					<artifactId>asm</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-tomcat</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 
