--- a/core/pom.xml
+++ b/core/pom.xml
@@ -1172,11 +1172,22 @@
 				<version>${jdom.version}</version>
 			</dependency>
 
-
 			<dependency>
 				<groupId>org.jboss.resteasy</groupId>
 				<artifactId>resteasy-spring-boot-starter</artifactId>
-				<version>${resteasy-spring-boot-starter.version}</version>
+				<version>${resteasy-spring-boot.version}</version>
+				<!-- exclusions not supported here, but as a reminder -->
+				<exclusions>
+					<exclusion>
+						<groupId>org.jboss.resteasy.spring</groupId>
+						<artifactId>resteasy-spring</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+			    <groupId>org.jboss.resteasy.spring</groupId>
+				<artifactId>resteasy-spring</artifactId>
+			    <version>${resteasy-spring.version}</version>
 			</dependency>
 			<dependency>
 			    <groupId>org.jboss.resteasy</groupId>
