--- a/viewers/restfulobjects/jaxrs-resteasy/pom.xml
+++ b/viewers/restfulobjects/jaxrs-resteasy/pom.xml
@@ -93,10 +93,31 @@
 					<artifactId>asm</artifactId>
 				</exclusion>
 				<exclusion>
+					<groupId>com.fasterxml.jackson.module</groupId>
+					<artifactId>jackson-module-jaxb-annotations</artifactId>
+				</exclusion>
+				<exclusion>
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-starter-tomcat</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>org.jboss.resteasy.spring</groupId>
+					<artifactId>resteasy-spring</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.jboss.resteasy</groupId>
+					<artifactId>resteasy-core</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.jboss.resteasy</groupId>
+					<artifactId>resteasy-core-spi</artifactId>
+				</exclusion>
 			</exclusions>
+		</dependency>
+
+		<dependency>
+		    <groupId>org.jboss.resteasy.spring</groupId>
+			<artifactId>resteasy-spring</artifactId>
 		</dependency>
 
 		<dependency>
