ISIS-3275: fixes surefire on RO and Wkt

--- a/viewers/restfulobjects/jaxrs-resteasy/pom.xml
+++ b/viewers/restfulobjects/jaxrs-resteasy/pom.xml
@@ -30,6 +30,9 @@
 	<properties>
 		<jar-plugin.automaticModuleName>org.apache.causeway.viewer.restfulobjects.jaxrsresteasy</jar-plugin.automaticModuleName>
 		<git-plugin.propertiesDir>org/apache/causeway/viewer.restfulobjects/jaxrsresteasy</git-plugin.propertiesDir>
+		
+		<!-- override surefire defaults from bom, as this is not a Java module yet -->
+		<surefire-plugin.argLine>-Xmx512m</surefire-plugin.argLine>
 	</properties>
 
 	<build>
