ISIS-3278: convert JDO artifacts to Java Modules (except datanucleus)

--- a/persistence/jdo/provider/pom.xml
+++ b/persistence/jdo/provider/pom.xml
@@ -39,6 +39,11 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>org.datanucleus</groupId>
+			<artifactId>datanucleus-rdbms</artifactId>
+		</dependency>
+		
+		<dependency>
 			<groupId>org.apache.causeway.core</groupId>
 			<artifactId>causeway-core-metamodel</artifactId>
 		</dependency>
