ISIS-3275: skip some jdo tests (for now)

--- a/persistence/jdo/datanucleus/pom.xml
+++ b/persistence/jdo/datanucleus/pom.xml
@@ -30,6 +30,9 @@
 	<properties>
 		<jar-plugin.automaticModuleName>org.apache.causeway.persistence.jdo.datanucleus</jar-plugin.automaticModuleName>
 		<git-plugin.propertiesDir>org/apache/causeway/persistence/jdo/datanucleus</git-plugin.propertiesDir>
+		
+		<!-- override surefire defaults from bom, as this is not a Java module yet -->
+		<surefire-plugin.argLine>-Xmx512m</surefire-plugin.argLine>
 	</properties>
 
 	<dependencies>
