ISIS-3275: more surefire fixes

--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -35,6 +35,9 @@
 	<properties>
 		<jar-plugin.automaticModuleName>org.apache.causeway.extensions</jar-plugin.automaticModuleName>
 		<git-plugin.propertiesDir>org/apache/causeway/extensions</git-plugin.propertiesDir>
+		
+		<!-- override surefire defaults from bom, as this is not a Java module yet -->
+		<surefire-plugin.argLine>-Xmx512m</surefire-plugin.argLine>
 	</properties>
 
 	<build>
