--- a/testing/pom.xml
+++ b/testing/pom.xml
@@ -36,6 +36,9 @@
 
 		<jar-plugin.automaticModuleName>org.apache.causeway.testing</jar-plugin.automaticModuleName>
 		<git-plugin.propertiesDir>org/apache/causeway/testing</git-plugin.propertiesDir>
+		
+		<!-- override surefire defaults from bom, as this is not a Java module yet -->
+		<surefire-plugin.argLine>-Xmx512m</surefire-plugin.argLine>
 	</properties>
 
 	<build>
