--- a/core/pom.xml
+++ b/core/pom.xml
@@ -1296,7 +1296,7 @@
 			</dependency>
 
 			<dependency>
-				<groupId>org.webjars.bower</groupId>
+				<groupId>org.webjars.npm</groupId>
 				<artifactId>summernote</artifactId>
 				<version>${summernote.version}</version>
 			</dependency>
