--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -445,6 +445,54 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
                 <artifactId>maven-plugin-annotations</artifactId>
                 <version>${maven.plugin.tools.version}</version>
             </dependency>
+            <dependency>
+			  <!-- temporary till Nov 24, 2022 -->
+		      <groupId>org.springframework</groupId>
+		      <artifactId>spring-aop</artifactId>
+		      <version>6.0.0</version>
+		    </dependency>
+		    <dependency>
+			  <!-- temporary till Nov 24, 2022 -->
+		      <groupId>org.springframework</groupId>
+		      <artifactId>spring-beans</artifactId>
+		      <version>6.0.0</version>
+		    </dependency>
+		    <dependency>
+			  <!-- temporary till Nov 24, 2022 -->
+		      <groupId>org.springframework</groupId>
+		      <artifactId>spring-core</artifactId>
+		      <version>6.0.0</version>
+		    </dependency>
+		    <dependency>
+			   <!-- temporary till Nov 24, 2022 -->
+		      <groupId>org.springframework</groupId>
+		      <artifactId>spring-context</artifactId>
+		      <version>6.0.0</version>
+		    </dependency>
+		    <dependency>
+			  <!-- temporary till Nov 24, 2022 -->
+		      <groupId>org.springframework</groupId>
+		      <artifactId>spring-expression</artifactId>
+		      <version>6.0.0</version>
+		    </dependency>
+		    <dependency>
+			  <!-- temporary till Nov 24, 2022 -->
+		      <groupId>org.springframework</groupId>
+		      <artifactId>spring-jcl</artifactId>
+		      <version>6.0.0</version>
+		    </dependency>
+		    <dependency>
+			  <!-- temporary till Nov 24, 2022 -->
+		      <groupId>org.springframework</groupId>
+		      <artifactId>spring-test</artifactId>
+		      <version>6.0.0</version>
+		    </dependency>
+		    <dependency>
+			  <!-- temporary till Nov 24, 2022 -->
+		      <groupId>org.springframework</groupId>
+		      <artifactId>spring-tx</artifactId>
+		      <version>6.0.0</version>
+		    </dependency>
         </dependencies>
     </dependencyManagement>
     <repositories>
