ISIS-3292: migrate Swagger Model v2 to OpenAPI v3
- yet using some stubs, to fill in details later (TODO markers)

--- a/core/metamodel/pom.xml
+++ b/core/metamodel/pom.xml
@@ -80,8 +80,8 @@
         </dependency>
 
         <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-core</artifactId>
+			<groupId>io.swagger.core.v3</groupId>
+			<artifactId>swagger-core</artifactId>
             <exclusions>
             	<!-- metamodel no longer has a dependency on guava -->
             	<exclusion>
