--- a/viewers/restfulobjects/client/pom.xml
+++ b/viewers/restfulobjects/client/pom.xml
@@ -46,6 +46,13 @@
 			<artifactId>spring-context</artifactId>
 			<scope>compile</scope>
 		</dependency>
+		
+		<dependency>
+			<!-- json parsing -->
+		    <groupId>org.eclipse.parsson</groupId>
+		    <artifactId>parsson</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
 
         <!-- TEST DEPENDENCIES -->
 
