ISIS-3275: re-include shiro; test provisioning fixes

--- a/regressiontests/stable/pom.xml
+++ b/regressiontests/stable/pom.xml
@@ -68,6 +68,7 @@
 			<groupId>org.apache.causeway.testing</groupId>
 			<artifactId>causeway-testing-fixtures-applib</artifactId>
 			<optional>true</optional>
+			<version>3.0.0-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
