--- a/security/shiro/pom.xml
+++ b/security/shiro/pom.xml
@@ -39,6 +39,9 @@
     	<!-- apache shiro is not migrated to JPMS yet, so no point in converting ours to JPMS -->
         <jar-plugin.automaticModuleName>org.apache.causeway.security.shiro</jar-plugin.automaticModuleName>
         <git-plugin.propertiesDir>org/apache/causeway/security/shiro</git-plugin.propertiesDir>
+        
+        <!-- override surefire defaults from bom, as this is not a Java module yet -->
+		<surefire-plugin.argLine>-Xmx384m</surefire-plugin.argLine>
     </properties>
 
 
