--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -428,13 +428,12 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
 
         <vaadin.version>23.2.9</vaadin.version>
 
-        <wicket.version>9.12.0</wicket.version> <!--  9.4.0 is last known good, before wicket put jupiter-api on the module graph -->
+        <wicket.version>10.0.0-M1-SNAPSHOT</wicket.version> <!--  9.4.0 is last known good, before wicket put jupiter-api on the module graph -->
         <wicket-bootstrap.version>6.0.0-M8</wicket-bootstrap.version> <!-- de.agilecoders.wicket:wicket-bootstrap... -->
         <wicket-webjars.version>3.0.6</wicket-webjars.version>
         <wicket-viewer-jquery.version>3.6.1</wicket-viewer-jquery.version> <!--  as served by wicket via webjars -->
 
-        <wicketstuff.version>${wicket.version}</wicketstuff.version> <!-- org.wicketstuff:wicketstuff-select2 -->
-        <wicketstuff-gmap3.version>${wicket.version}</wicketstuff-gmap3.version>
+        <wicketstuff.version>9.12.0</wicketstuff.version> <!-- org.wicketstuff:wicketstuff-select2 -->
 
         <!-- APACHE CAUSEWAY customisation 6/21: end -->
     </properties>
@@ -450,12 +449,20 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
     <repositories>
         <!-- APACHE CAUSEWAY customisation 7/21: start -->
         <repository>
-			<!-- temporary till release of shiro 2.0.0 and cxf 4.0.0 -->
+			<!-- temporary till release of cxf 4.0.0, shiro 2.0.0 and wicket 10.0.0 -->
             <id>apache.snapshots</id>
             <name>Shiro Snapshot Repository</name>
             <url>https://repository.apache.org/content/groups/snapshots/</url>
             <snapshots><enabled>true</enabled></snapshots>
         </repository>
+        <repository>
+			<!-- temporary till release of wicket-stuff 10.0.0 -->
+			<id>wicketstuff-core-snapshots</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>		
+		</repository>
         <!-- breaks dependabot run: timeout due to repo not accessible
         <repository>
             <id>apache.snapshots</id>
