--- a/viewers/wicket/ui/pom.xml
+++ b/viewers/wicket/ui/pom.xml
@@ -72,7 +72,7 @@
         </dependency>
 
 		<dependency>
-			<groupId>org.apache.wicket</groupId>
+			<groupId>com.github.apache-causeway-committers.wicket</groupId>
 			<artifactId>wicket-devutils</artifactId>
 			<exclusions>
 				<exclusion>
@@ -87,7 +87,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.apache.wicket</groupId>
+			<groupId>com.github.apache-causeway-committers.wicket</groupId>
 			<artifactId>wicket-extensions</artifactId>
 			<exclusions>
 				<exclusion>
@@ -97,7 +97,7 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.wicket</groupId>
+			<groupId>com.github.apache-causeway-committers.wicket</groupId>
 			<artifactId>wicket-auth-roles</artifactId>
 			<exclusions>
 				<exclusion>
@@ -108,7 +108,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.apache.wicket</groupId>
+			<groupId>com.github.apache-causeway-committers.wicket</groupId>
 			<artifactId>wicket-spring</artifactId>
 			<exclusions>
 				<!-- already provided by jakarta.inject-api -->
