--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -428,7 +428,7 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
 
         <vaadin.version>23.2.9</vaadin.version>
 
-        <wicket.version>-f5513ee9d6-1</wicket.version> <!--  9.4.0 is last known good, before wicket put jupiter-api on the module graph -->
+        <wicket.version>936167650a</wicket.version> <!--  9.4.0 is last known good, before wicket put jupiter-api on the module graph -->
         
         <wicket-bootstrap.version>6.0.0-M8</wicket-bootstrap.version> <!-- de.agilecoders.wicket:wicket-bootstrap... -->
         <wicket-webjars.version>3.0.6</wicket-webjars.version>
